src/gen/java/org/echetlon/lang/EchetlonParser.java
// Generated from C:/projects/java/echetlon-lang\Echetlon.g4 by ANTLR 4.8
package org.echetlon.lang;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class EchetlonParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, OBJ=2, INT=3, STR=4, NEW=5, LOOP=6, RETURN=7, EQ=8, STRING=9, IDENTIFIER=10, 
		SEMIC=11, COLON=12, LCPAREN=13, RCPAREN=14, LPAREN=15, RPAREN=16, LSPAREN=17, 
		RSPAREN=18, COMMA=19, DOT=20, MINUS=21, PLUS=22, INT_LIT=23;
	public static final int
		RULE_singleType = 0, RULE_array = 1, RULE_type = 2, RULE_fieldDecl = 3, 
		RULE_fieldAlloc = 4, RULE_argument = 5, RULE_methodDecl = 6, RULE_objDecl = 7, 
		RULE_objAlloc = 8, RULE_varObjDec = 9, RULE_fieldDeref = 10, RULE_varAss = 11, 
		RULE_loop = 12, RULE_methodCallStmt = 13, RULE_returnStmt = 14, RULE_statement = 15, 
		RULE_expression = 16, RULE_file = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"singleType", "array", "type", "fieldDecl", "fieldAlloc", "argument", 
			"methodDecl", "objDecl", "objAlloc", "varObjDec", "fieldDeref", "varAss", 
			"loop", "methodCallStmt", "returnStmt", "statement", "expression", "file"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'obj'", "'int'", "'string'", "'new'", "'loop'", "'return'", 
			"'='", null, null, "';'", "':'", "'{'", "'}'", "'('", "')'", "'['", "']'", 
			"','", "'.'", "'-'", "'+'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "OBJ", "INT", "STR", "NEW", "LOOP", "RETURN", "EQ", "STRING", 
			"IDENTIFIER", "SEMIC", "COLON", "LCPAREN", "RCPAREN", "LPAREN", "RPAREN", 
			"LSPAREN", "RSPAREN", "COMMA", "DOT", "MINUS", "PLUS", "INT_LIT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Echetlon.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public EchetlonParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SingleTypeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(EchetlonParser.INT, 0); }
		public TerminalNode STR() { return getToken(EchetlonParser.STR, 0); }
		public TerminalNode IDENTIFIER() { return getToken(EchetlonParser.IDENTIFIER, 0); }
		public SingleTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_singleType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EchetlonListener ) ((EchetlonListener)listener).enterSingleType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EchetlonListener ) ((EchetlonListener)listener).exitSingleType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EchetlonVisitor ) return ((EchetlonVisitor<? extends T>)visitor).visitSingleType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SingleTypeContext singleType() throws RecognitionException {
		SingleTypeContext _localctx = new SingleTypeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_singleType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << STR) | (1L << IDENTIFIER))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayContext extends ParserRuleContext {
		public SingleTypeContext singleType() {
			return getRuleContext(SingleTypeContext.class,0);
		}
		public TerminalNode LSPAREN() { return getToken(EchetlonParser.LSPAREN, 0); }
		public TerminalNode RSPAREN() { return getToken(EchetlonParser.RSPAREN, 0); }
		public ArrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EchetlonListener ) ((EchetlonListener)listener).enterArray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EchetlonListener ) ((EchetlonListener)listener).exitArray(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EchetlonVisitor ) return ((EchetlonVisitor<? extends T>)visitor).visitArray(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrayContext array() throws RecognitionException {
		ArrayContext _localctx = new ArrayContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_array);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			singleType();
			setState(39);
			match(LSPAREN);
			setState(40);
			match(RSPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public SingleTypeContext singleType() {
			return getRuleContext(SingleTypeContext.class,0);
		}
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EchetlonListener ) ((EchetlonListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EchetlonListener ) ((EchetlonListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EchetlonVisitor ) return ((EchetlonVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_type);
		try {
			setState(44);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(42);
				singleType();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(43);
				array();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldDeclContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(EchetlonParser.IDENTIFIER, 0); }
		public TerminalNode SEMIC() { return getToken(EchetlonParser.SEMIC, 0); }
		public FieldDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EchetlonListener ) ((EchetlonListener)listener).enterFieldDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EchetlonListener ) ((EchetlonListener)listener).exitFieldDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EchetlonVisitor ) return ((EchetlonVisitor<? extends T>)visitor).visitFieldDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldDeclContext fieldDecl() throws RecognitionException {
		FieldDeclContext _localctx = new FieldDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_fieldDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			type();
			setState(47);
			match(IDENTIFIER);
			setState(48);
			match(SEMIC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldAllocContext extends ParserRuleContext {
		public Token name;
		public TerminalNode EQ() { return getToken(EchetlonParser.EQ, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(EchetlonParser.IDENTIFIER, 0); }
		public FieldAllocContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldAlloc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EchetlonListener ) ((EchetlonListener)listener).enterFieldAlloc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EchetlonListener ) ((EchetlonListener)listener).exitFieldAlloc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EchetlonVisitor ) return ((EchetlonVisitor<? extends T>)visitor).visitFieldAlloc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldAllocContext fieldAlloc() throws RecognitionException {
		FieldAllocContext _localctx = new FieldAllocContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_fieldAlloc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			((FieldAllocContext)_localctx).name = match(IDENTIFIER);
			setState(51);
			match(EQ);
			setState(52);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentContext extends ParserRuleContext {
		public Token name;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(EchetlonParser.IDENTIFIER, 0); }
		public ArgumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argument; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EchetlonListener ) ((EchetlonListener)listener).enterArgument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EchetlonListener ) ((EchetlonListener)listener).exitArgument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EchetlonVisitor ) return ((EchetlonVisitor<? extends T>)visitor).visitArgument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgumentContext argument() throws RecognitionException {
		ArgumentContext _localctx = new ArgumentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_argument);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			type();
			setState(55);
			((ArgumentContext)_localctx).name = match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodDeclContext extends ParserRuleContext {
		public Token name;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode COLON() { return getToken(EchetlonParser.COLON, 0); }
		public TerminalNode LCPAREN() { return getToken(EchetlonParser.LCPAREN, 0); }
		public TerminalNode RCPAREN() { return getToken(EchetlonParser.RCPAREN, 0); }
		public TerminalNode SEMIC() { return getToken(EchetlonParser.SEMIC, 0); }
		public TerminalNode IDENTIFIER() { return getToken(EchetlonParser.IDENTIFIER, 0); }
		public List<ArgumentContext> argument() {
			return getRuleContexts(ArgumentContext.class);
		}
		public ArgumentContext argument(int i) {
			return getRuleContext(ArgumentContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(EchetlonParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(EchetlonParser.COMMA, i);
		}
		public MethodDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EchetlonListener ) ((EchetlonListener)listener).enterMethodDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EchetlonListener ) ((EchetlonListener)listener).exitMethodDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EchetlonVisitor ) return ((EchetlonVisitor<? extends T>)visitor).visitMethodDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodDeclContext methodDecl() throws RecognitionException {
		MethodDeclContext _localctx = new MethodDeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_methodDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			type();
			setState(58);
			((MethodDeclContext)_localctx).name = match(IDENTIFIER);
			setState(59);
			match(COLON);
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << STR) | (1L << IDENTIFIER))) != 0)) {
				{
				setState(60);
				argument();
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(61);
					match(COMMA);
					setState(62);
					argument();
					}
					}
					setState(67);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(70);
			match(LCPAREN);
			setState(72); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(71);
				statement();
				}
				}
				setState(74); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OBJ) | (1L << INT) | (1L << STR) | (1L << LOOP) | (1L << RETURN) | (1L << IDENTIFIER) | (1L << DOT))) != 0) );
			setState(76);
			match(RCPAREN);
			setState(77);
			match(SEMIC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjDeclContext extends ParserRuleContext {
		public Token name;
		public TerminalNode OBJ() { return getToken(EchetlonParser.OBJ, 0); }
		public TerminalNode LCPAREN() { return getToken(EchetlonParser.LCPAREN, 0); }
		public TerminalNode RCPAREN() { return getToken(EchetlonParser.RCPAREN, 0); }
		public TerminalNode IDENTIFIER() { return getToken(EchetlonParser.IDENTIFIER, 0); }
		public List<FieldDeclContext> fieldDecl() {
			return getRuleContexts(FieldDeclContext.class);
		}
		public FieldDeclContext fieldDecl(int i) {
			return getRuleContext(FieldDeclContext.class,i);
		}
		public List<MethodDeclContext> methodDecl() {
			return getRuleContexts(MethodDeclContext.class);
		}
		public MethodDeclContext methodDecl(int i) {
			return getRuleContext(MethodDeclContext.class,i);
		}
		public ObjDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EchetlonListener ) ((EchetlonListener)listener).enterObjDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EchetlonListener ) ((EchetlonListener)listener).exitObjDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EchetlonVisitor ) return ((EchetlonVisitor<? extends T>)visitor).visitObjDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjDeclContext objDecl() throws RecognitionException {
		ObjDeclContext _localctx = new ObjDeclContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_objDecl);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(OBJ);
			setState(80);
			((ObjDeclContext)_localctx).name = match(IDENTIFIER);
			setState(81);
			match(LCPAREN);
			setState(85);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(82);
					fieldDecl();
					}
					} 
				}
				setState(87);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << STR) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(88);
				methodDecl();
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(94);
			match(RCPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjAllocContext extends ParserRuleContext {
		public Token alloc;
		public TerminalNode NEW() { return getToken(EchetlonParser.NEW, 0); }
		public TerminalNode LPAREN() { return getToken(EchetlonParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(EchetlonParser.RPAREN, 0); }
		public TerminalNode IDENTIFIER() { return getToken(EchetlonParser.IDENTIFIER, 0); }
		public List<FieldAllocContext> fieldAlloc() {
			return getRuleContexts(FieldAllocContext.class);
		}
		public FieldAllocContext fieldAlloc(int i) {
			return getRuleContext(FieldAllocContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(EchetlonParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(EchetlonParser.COMMA, i);
		}
		public ObjAllocContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objAlloc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EchetlonListener ) ((EchetlonListener)listener).enterObjAlloc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EchetlonListener ) ((EchetlonListener)listener).exitObjAlloc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EchetlonVisitor ) return ((EchetlonVisitor<? extends T>)visitor).visitObjAlloc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjAllocContext objAlloc() throws RecognitionException {
		ObjAllocContext _localctx = new ObjAllocContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_objAlloc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(NEW);
			setState(97);
			((ObjAllocContext)_localctx).alloc = match(IDENTIFIER);
			setState(98);
			match(LPAREN);
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
				setState(99);
				fieldAlloc();
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(100);
					match(COMMA);
					setState(101);
					fieldAlloc();
					}
					}
					setState(106);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(109);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarObjDecContext extends ParserRuleContext {
		public Token var;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode EQ() { return getToken(EchetlonParser.EQ, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(EchetlonParser.IDENTIFIER, 0); }
		public VarObjDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varObjDec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EchetlonListener ) ((EchetlonListener)listener).enterVarObjDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EchetlonListener ) ((EchetlonListener)listener).exitVarObjDec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EchetlonVisitor ) return ((EchetlonVisitor<? extends T>)visitor).visitVarObjDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarObjDecContext varObjDec() throws RecognitionException {
		VarObjDecContext _localctx = new VarObjDecContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_varObjDec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			type();
			setState(112);
			((VarObjDecContext)_localctx).var = match(IDENTIFIER);
			setState(113);
			match(EQ);
			setState(114);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldDerefContext extends ParserRuleContext {
		public Token name;
		public TerminalNode DOT() { return getToken(EchetlonParser.DOT, 0); }
		public TerminalNode IDENTIFIER() { return getToken(EchetlonParser.IDENTIFIER, 0); }
		public FieldDerefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldDeref; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EchetlonListener ) ((EchetlonListener)listener).enterFieldDeref(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EchetlonListener ) ((EchetlonListener)listener).exitFieldDeref(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EchetlonVisitor ) return ((EchetlonVisitor<? extends T>)visitor).visitFieldDeref(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldDerefContext fieldDeref() throws RecognitionException {
		FieldDerefContext _localctx = new FieldDerefContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_fieldDeref);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(DOT);
			setState(117);
			((FieldDerefContext)_localctx).name = match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarAssContext extends ParserRuleContext {
		public Token var;
		public TerminalNode EQ() { return getToken(EchetlonParser.EQ, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(EchetlonParser.IDENTIFIER, 0); }
		public FieldDerefContext fieldDeref() {
			return getRuleContext(FieldDerefContext.class,0);
		}
		public VarAssContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varAss; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EchetlonListener ) ((EchetlonListener)listener).enterVarAss(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EchetlonListener ) ((EchetlonListener)listener).exitVarAss(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EchetlonVisitor ) return ((EchetlonVisitor<? extends T>)visitor).visitVarAss(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarAssContext varAss() throws RecognitionException {
		VarAssContext _localctx = new VarAssContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_varAss);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			((VarAssContext)_localctx).var = match(IDENTIFIER);
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DOT) {
				{
				setState(120);
				fieldDeref();
				}
			}

			setState(123);
			match(EQ);
			setState(124);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoopContext extends ParserRuleContext {
		public TerminalNode LOOP() { return getToken(EchetlonParser.LOOP, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode LCPAREN() { return getToken(EchetlonParser.LCPAREN, 0); }
		public TerminalNode RCPAREN() { return getToken(EchetlonParser.RCPAREN, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public LoopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EchetlonListener ) ((EchetlonListener)listener).enterLoop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EchetlonListener ) ((EchetlonListener)listener).exitLoop(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EchetlonVisitor ) return ((EchetlonVisitor<? extends T>)visitor).visitLoop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LoopContext loop() throws RecognitionException {
		LoopContext _localctx = new LoopContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_loop);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(LOOP);
			setState(127);
			expression(0);
			setState(128);
			match(LCPAREN);
			setState(130); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(129);
				statement();
				}
				}
				setState(132); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OBJ) | (1L << INT) | (1L << STR) | (1L << LOOP) | (1L << RETURN) | (1L << IDENTIFIER) | (1L << DOT))) != 0) );
			setState(134);
			match(RCPAREN);
			}
		}
